--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -27,6 +27,7 @@
      <groupId>org.jacoco</groupId>
    <artifactId>jacoco-maven-plugin</artifactId>
 <version>0.8.6</version>
+     </plugin>
     </plugins>
   </build>
 
