--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -27,6 +27,20 @@
      <groupId>org.jacoco</groupId>
    <artifactId>jacoco-maven-plugin</artifactId>
 <version>0.8.6</version>
+              <executions>
+                       <execution>
+                                <goals>
+                                         <goal>prepare-agent</goal>
+                                </goals>
+                       </execution>
+                        <execution>
+                                 <id>reort</id>
+                                 <phase>prepare-package</phase>
+                                <goals>
+                                         <goal>report</goal>
+                                </goals>
+                       </execution>
+           </executions>   
      </plugin>
     </plugins>
   </build>
