--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -23,6 +23,11 @@
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
       </plugin>
+               <plugin>
+     <groupId>org.jacoco</groupId>
+   <artifactId>jacoco-maven-plugin</artifactId>
+<version>0.8.6</version>
+      </plugin>
     </plugins>
   </build>
 
