--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,11 @@
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
       </dependency>
-
+<dependency>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.11.0.3922</version>
+</dependency>
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
         <artifactId>jsp-api</artifactId>
