--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
+          <reportPlugins>
             <plugin>
               <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
@@ -85,6 +86,7 @@
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>taglist-maven-plugin</artifactId>
             </plugin>
+          </reportPlugins>
         </configuration>
       </plugin>
     </plugins>
@@ -223,4 +225,3 @@
   </prerequisites>
 
 </project>
-
