--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,11 @@
         <version>1.2.1</version>
         <scope>test</scope>
       </dependency>
-
+<dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-plugin-api</artifactId>
+    <version>3.3.9</version>
+</dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-library</artifactId>
