--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,11 @@
             <plugin>
               <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
-
+    <plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.13-SNAPSHOT</version>
+    </plugin>
             <plugin>
               <artifactId>maven-jxr-plugin</artifactId>
             </plugin>
