--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,11 @@
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
       </dependency>
-
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-site-plugin</artifactId>
+    <version>4.0.0-M14</version>
+</dependency>
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
         <artifactId>jsp-api</artifactId>
