--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -24,10 +24,24 @@
         <artifactId>jetty-maven-plugin</artifactId>
       </plugin>
                  <plugin>
-      <groupId>org.jacoco</groupId>
-      <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.13-SNAPSHOT</version>
-    </plugin>
+     <groupId>org.jacoco</groupId>
+   <artifactId>jacoco-maven-plugin</artifactId>
+<version>0.8.6</version>
+              <executions>
+                       <execution>
+                                <goals>
+                                         <goal>prepare-agent</goal>
+                                </goals>
+                       </execution>
+                        <execution>
+                                 <id>report</id>
+                                 <phase>prepare-package</phase>
+                                <goals>
+                                         <goal>report</goal>
+                                </goals>
+                       </execution>
+           </executions>   
+     </plugin>
                
              <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
