--- a/server/pom.xml
+++ b/server/pom.xml
@@ -14,9 +14,30 @@
   <packaging>jar</packaging>
   <name>Server</name>
   <description>Logic.</description>
-
-  <build>
+         <build><plugins>
+<plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.13-SNAPSHOT</version>
+             <executions>
+                       <execution>
+                                <goals>
+                                         <goal>prepare-agent</goal>
+                                </goals>
+                       </execution>
+                        <execution>
+                                 <id>report</id>
+                                 <phase>prepare-package</phase>
+                                <goals>
+                                         <goal>report</goal>
+                                </goals>
+                       </execution>
+           </executions>
+             
+    </plugin>
+         </plugins>
     <finalName>${project.artifactId}</finalName>
+     
   </build>
 
   <dependencies>
