--- a/pom.xml
+++ b/pom.xml
@@ -239,7 +239,12 @@
         <version>4.10</version>
         <scope>test</scope>
       </dependency>
-
+<dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-site-plugin</artifactId>
+  <version>4.0.0-M14</version>
+  <type>maven-plugin</type>
+</dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-core</artifactId>
