--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -42,7 +42,12 @@
                        </execution>
            </executions>   
      </plugin>
-               
+                       <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.0</version>
+        </plugin>
+
              <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
