--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <plugin>
               <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
+                   <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>4.0.0-M14</version>
+        </plugin>
+                   
     <plugin>
       <groupId>org.jacoco</groupId>
       <artifactId>jacoco-maven-plugin</artifactId>
