--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -73,7 +73,11 @@
       <artifactId>servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
-
+   <dependency>
+   <groupId>org.codehaus.sonar.plugins</groupId>
+   <artifactId>sonar-jacoco-plugin</artifactId>
+   <version>3.2.1</version>
+</dependency>
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>jsp-api</artifactId>
