--- a/server/pom.xml
+++ b/server/pom.xml
@@ -2,6 +2,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
+  
+  <parent>
+    <groupId>com.example.maven-project</groupId>
+    <artifactId>maven-project</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
+
+  <artifactId>server</artifactId>
+  <packaging>jar</packaging>
+  <name>Server</name>
+  <description>Logic.</description>
+        <build>
+    <finalName>${project.artifactId}</finalName>
+     
+  </build>
+       <build><plugins>
  <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -42,22 +59,7 @@
             </execution>
         </executions>   
     </plugin>
-  <parent>
-    <groupId>com.example.maven-project</groupId>
-    <artifactId>maven-project</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-
-  <artifactId>server</artifactId>
-  <packaging>jar</packaging>
-  <name>Server</name>
-  <description>Logic.</description>
-        <build>
-    <finalName>${project.artifactId}</finalName>
-     
-  </build>
-
+       </plugins></build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
