--- a/server/pom.xml
+++ b/server/pom.xml
@@ -14,10 +14,6 @@
   <packaging>jar</packaging>
   <name>Server</name>
   <description>Logic.</description>
-        <build>
-    <finalName>${project.artifactId}</finalName>
-     
-  </build>
        <build><plugins>
  <plugin>
         <groupId>org.jacoco</groupId>
@@ -59,7 +55,9 @@
             </execution>
         </executions>   
     </plugin>
-       </plugins></build>
+       </plugins> 
+                <finalName>${project.artifactId}</finalName>
+       </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
