--- a/server/pom.xml
+++ b/server/pom.xml
@@ -35,12 +35,13 @@
    <version>3.2.1</version>
 </dependency>  
 <dependency>
-         
+  <dependency>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-site-plugin</artifactId>
   <version>4.0.0-M14</version>
   <type>maven-plugin</type>
-</dependency>
+</dependency>       
+  
     <dependency> 
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-library</artifactId>
