--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -28,26 +28,26 @@
           <artifactId>maven-site-plugin</artifactId>
           <version>4.0.0-M14</version>
         </plugin>
-              <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.1.201405082137</version>
-        <executions>
-            <execution>
-                <id>default-prepare-agent</id>
-                <goals>
-                    <goal>prepare-agent</goal>
-                </goals>
-            </execution>
-            <execution>
-                <id>default-report</id>
-                <phase>prepare-package</phase>
-                <goals>
-                    <goal>report</goal>
-                </goals>
-            </execution>            
-        </executions>
-    </plugin>   
+          <plugin>
+     <groupId>org.jacoco</groupId>
+   <artifactId>jacoco-maven-plugin</artifactId>
+<version>0.8.6</version>
+     <executions>
+                       <execution>
+                                <goals>
+                                         <goal>prepare-agent</goal>
+                                </goals>
+                       </execution>
+                        <execution>
+                                 <id>report</id>
+                                 <phase>prepare-package</phase>
+                                <goals>
+                                         <goal>report</goal>
+                                </goals>
+                       </execution>
+           </executions> 
+
+</plugin> 
                        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
