--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -34,9 +34,12 @@
 <version>0.8.6</version>
      <executions>
                        <execution>
+                                <id>default-prepare-agent</id>
                                 <goals>
                                          <goal>prepare-agent</goal>
                                 </goals>
+                                <configuration>
+                                         <skip>true</skip>
                        </execution>
                         <execution>
                                  <id>report</id>
