--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -40,6 +40,7 @@
                                 </goals>
                                 <configuration>
                                          <skip>true</skip>
+                                </configuration>
                        </execution>
                         <execution>
                                  <id>report</id>
