--- a/deployment.yml
+++ b/deployment.yml
@@ -1,8 +1,8 @@
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Register-app-deploy
+  name: register-app-deploy
 spec:
   selector:
     matchLabels:
