--- a/deployment.yml
+++ b/deployment.yml
@@ -2,41 +2,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: register-app-deploy
+ name: registerappdeployment
 spec:
-  selector:
-    matchLabels:
-        app: register-app
-  replicas: 2
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-       maxSurge: 1
-       maxUnavailable: 1
-  template:
-    metadata:
-      labels:
-        app: register-app
-    spec:
-     containers:
-      - name: register-app-container
-        image: nandhanab/register-app
-        imagePullPolicy: Always
-        ports:
-          - containerPort: 80
-
+ replicas: 2
+ strategy:
+    type: Recreate
+ selector:
+   matchLabels:
+     app: registerapp
+ template:
+  metadata:
+   name: registerapppod
+   labels:
+     app: registerapp
+  spec:
+    containers:
+    - name: registerappcontainer
+      image: nandhanab/register-app
+      imagePullPolicy: Always
+      ports:
+      - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: register-app-service
-  labels:
-    app: register-app
+ name: registerappsvc
 spec:
-  selector:
-    app: register-app
   type: LoadBalancer
+  selector:
+   app: registerapp
   ports:
-   - port: 8080
-     targetPort: 80
+   - port: 80
+     targetPort: 8080
 ...
