--- a/playbook.yml
+++ b/playbook.yml
@@ -1,16 +1,24 @@
-- hosts: all
-  become: true
-
+---
+- name: Deploying Application to Kubernetes
+  hosts: minikube
+  gather_facts: true
+  vars:
+    kubeconfig_file: ~/.kube/config
+    namespace_name: registerappns
   tasks:
-  - name: COPY DEPLOYMENT FILE TO KUBERNETES CLUSTER
-    copy:
-     src: deployment.yml
-     dest: /root/
+    - name: Create a k8s namespace
+      kubernetes.core.k8s:
+        kubeconfig: "{{ kubeconfig_file }}"
+        name: "{{ namespace_name }}"
+        api_version: v1
+        kind: Namespace
+        state: present
 
-
-  - name: DELETE PREVIOUS KUBERNETES OBJECTS
-    command: kubectl delete -f /root/deployment.yml
-  
-  - name: CREATE A DEPLOYMENT
-    command: kubectl apply -f /root/deployment.yml
+    - name: Create Deployment
+      kubernetes.core.k8s:
+        kubeconfig: "{{ kubeconfig_file }}"
+        state: present
+        src: /root/deployment.yml
+        namespace: "{{ namespace_name }}"
 ...
+
