--- a/deployment.yml
+++ b/deployment.yml
@@ -19,7 +19,7 @@ spec:
     containers:
     - name: registerappcontainer
       image: nandhanab/register-app
-      imagePullPolicy: Never
+      imagePullPolicy: Always
       ports:
       - containerPort: 8080
 ---
